# gtasks-cli

./: README.md  pyproject.toml
gtasks_cli/: cli.py
gtasks_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
